[package]
name = "rouille-react"
version = "0.1.0"
authors = ["AlexandreImperiale <https://github.com/AlexandreImperiale>"]

[dependencies]
rouille = "2.1.0"
log = "0.4"
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0.0"
r2d2 = "*"
